# FingerSavior

./: README.md  pyproject.toml  run.bat
src/: main.py
src/fingersavior/: command.py  flow.py  game.py  handle_result.py  symbol.py  utils.py  window.py
